Авторизация и подсветка активного элемента меню

--- a/src/main/webapp/WEB-INF/templates/hosts.html
+++ b/src/main/webapp/WEB-INF/templates/hosts.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:include="layout :: htmlhead" th:with="title='Hosts List'"></head>
 <body>
-<div th:replace="layout :: navbar">(navbar)</div>
+<div th:replace="layout :: navbar(Hosts)">(navbar)</div>
 <div class="container">
     <div class="starter-template">
         <table class="table-bordered table-hover">
