--- a/src/main/webapp/WEB-INF/templates/scans.html
+++ b/src/main/webapp/WEB-INF/templates/scans.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:include="layout :: htmlhead" th:with="title='Scan List'"></head>
 <body>
-<div th:replace="layout :: navbar">(navbar)</div>
+<div th:replace="layout :: navbar(Scans)">(navbar)</div>
 <div class="starter-template">
     <table class="table-bordered table-hover">
         <thead>
